MAINT-28775: Fix some pages broken layout in mobile (#159)
This fixes the broken layout in mobile for some pages (stream, space, settings ...) after regression

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/SocialPage/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/SocialPage/Style.less
@@ -72,7 +72,19 @@
 #singlePageApplicationContainer, .singlePageApplication, .SpaceActivityStreamPortletPage {
   max-width: 100%;
   width: @maxTabletWidth;
-  padding: 20px 14%;
+  margin: 22px auto 10px;
+}
+
+@media (min-width: @minLargeDesktop) {
+  .SpaceActivityStreamPortletPage {
+    padding: 20px 14%;
+  }
+}
+
+@media (max-width: @maxDesktop) {
+  .SpaceActivityStreamPortletPage {
+    margin: 22px auto 10px;
+  }
 }
 
 @media (max-width: @maxTabletWidth) {
